# polymarket_prediction

./: .agents.yml  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: LEARNINGS.md
.github/workflows/: pages.yml  publish_alerts.yml
archive/: alerts-2026-01.jsonl  alerts-2026-02.jsonl  alerts-2026-03.jsonl  alerts-2026-04.jsonl
docs/: alerts.json  alerts.jsonl  index.html
scripts/: publish_alerts.py
src/polymarket_watch/: alerts.py  cli.py  http.py  logging_json.py  polymarket.py  scoring.py  store.py
state/: last_published_bucket_utc.txt  last_published_hour_utc.txt  state.json
tests/: test_alerts_and_logging.py  test_cli.py  test_coverage_boost.py  test_http.py  test_polymarket_client.py  test_publish_alerts.py  test_scoring.py  test_store.py
