[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-watch"
version = "0.1.0"
description = "Watch Polymarket trades and alert on suspicious activity."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pmwatch = "polymarket_watch.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.7.8",
  "coverage>=7.4.0",
  "detect-secrets>=1.5.0",
  "pre-commit>=3.6.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]

[tool.coverage.run]
branch = true
source = ["polymarket_watch"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
